# BOSP-facedetect

./: README.md
FaceDetect/: CMakeLists.txt  Doxyfile.in  FaceDetect.conf.in  Kconfig  bosp.mk
FaceDetect/include/: FaceDetect_exc.h  version.h
FaceDetect/src/: CMakeLists.txt  FaceDetect_exc.cc  FaceDetect_main.cc  version.cc.in
